--- a/amazed/view/client/src/components/CreateProducts.css
+++ b/amazed/view/client/src/components/CreateProducts.css
@@ -23,3 +23,13 @@
 .field-value {
     font-weight: bolder;
 }
+
+.conditionBased {
+    display: none;
+}
+
+#cprod_err {
+    font-size: 18px;
+    color: red;
+    background-color: lavender;
+}
